[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scenes/Buttons/PauseMainMenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Buttons/PauseContinueButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Buttons/PauseExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/space_frigate_font.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PauseCL" type="CanvasLayer"]
layer = 50

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.85 )

[node name="Botones" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -535.5
margin_top = -164.5
margin_right = 535.5
margin_bottom = 164.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseContinueButton" type="Button" parent="PauseMenu/Botones" instance=ExtResource( 2 )]
margin_right = 1071.0
margin_bottom = 120.0
rect_min_size = Vector2( 450, 120 )
custom_colors/font_color_focus = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "Continuar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMainMenuButton" type="Button" parent="PauseMenu/Botones" instance=ExtResource( 1 )]
margin_top = 124.0
margin_right = 1071.0
margin_bottom = 244.0
rect_min_size = Vector2( 450, 120 )
custom_colors/font_color_focus = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "Men√∫ principal"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseExitButton" type="Button" parent="PauseMenu/Botones" instance=ExtResource( 3 )]
margin_top = 248.0
margin_right = 1071.0
margin_bottom = 368.0
rect_min_size = Vector2( 450, 120 )
custom_colors/font_color_focus = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.901961, 0.556863, 0.207843, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
text = "Salir"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="PauseMenu/Botones/PauseContinueButton" to="PauseMenu" method="_on_PauseContinueButton_mouse_entered"]
[connection signal="pressed" from="PauseMenu/Botones/PauseContinueButton" to="PauseMenu" method="_on_PauseContinueButton_pressed"]
[connection signal="mouse_entered" from="PauseMenu/Botones/PauseMainMenuButton" to="PauseMenu" method="_on_PauseMainMenuButton_mouse_entered"]
[connection signal="pressed" from="PauseMenu/Botones/PauseMainMenuButton" to="PauseMenu" method="_on_PauseMainMenuButton_pressed"]
[connection signal="mouse_entered" from="PauseMenu/Botones/PauseExitButton" to="PauseMenu" method="_on_PauseExitButton_mouse_entered"]
[connection signal="pressed" from="PauseMenu/Botones/PauseExitButton" to="PauseMenu" method="_on_PauseExitButton_pressed"]
